@@ -5,6 +5,8 @@ finally got around to adding comments and doc strings to funcs and classes.
 player now finishes full attack sequence per attack, disables all other abilities
 enemy now faces correct direction
 animate helper function created - stops repeated code of selecting images to animate
+created big enemy class
+added random speeds to enemies
 
 V 0.2
 Finished up random background generation
